--- a/templates/.env
+++ b/templates/.env
@@ -1,12 +1,16 @@
+# Bin
+PATH="$PATH:$HOME/_/bin"
+
 # Node
-NPM_PACKAGES="$HOME/.npm-packages"
-PATH="$NPM_PACKAGES/bin:$PATH"
-unset MANPATH
-MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
-NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
+#NPM_PACKAGES="$HOME/.npm-packages"
+#PATH="$NPM_PACKAGES/bin:$PATH"
+#unset MANPATH
+#MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
+#NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
+export NODE_ENV=development
 
 # PHP
-PATH="$HOME/.composer/vendor/bin:$PATH"
+PATH="$PATH:$HOME/.composer/vendor/bin"
 
 # Python
 source /usr/local/bin/virtualenvwrapper.sh
