Set the mc skin

--- a/templates/.env
+++ b/templates/.env
@@ -18,3 +18,7 @@ source /usr/local/bin/virtualenvwrapper.sh
 # Ruby
 [[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
 export PATH="$PATH:$HOME/.rvm/bin" # Add RVM to PATH for scripting
+
+# Solarized
+export MC_SKIN=$HOME/.config/mc/solarized.ini
+
