Localize node to the user home

--- a/templates/.env
+++ b/templates/.env
@@ -2,11 +2,11 @@
 PATH="$PATH:$HOME/_/bin"
 
 # Node
-#NPM_PACKAGES="$HOME/.npm-packages"
-#PATH="$NPM_PACKAGES/bin:$PATH"
-#unset MANPATH
-#MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
-#NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
+NPM_PACKAGES="$HOME/.npm-packages"
+PATH="$NPM_PACKAGES/bin:$PATH"
+unset MANPATH
+MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
+NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
 export NODE_ENV=development
 
 # PHP
