Add golang, Java, AWS, replace rvm with chruby

--- a/templates/.env
+++ b/templates/.env
@@ -1,5 +1,13 @@
 # Bin
-PATH="$PATH:$HOME/_/bin"
+PATH="$PATH:$HOME/_/bin:$HOME/_/aws/bin"
+
+# AWS
+export AWS_CREDENTIAL_FILE="$HOME/.ssh/rds"
+export AWS_RDS_HOME="$HOME/_/aws"
+export EC2_REGION="eu-west-1"
+
+# Java
+export JAVA_HOME="/usr"
 
 # Node
 NPM_PACKAGES="$HOME/.npm-packages"
@@ -9,6 +17,10 @@ MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
 NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
 export NODE_ENV=development
 
+# Golang
+export GOPATH="/home/karelian/_/go"
+PATH="$PATH:$HOME/_/go/bin"
+
 # PHP
 PATH="$PATH:$HOME/.composer/vendor/bin"
 
@@ -16,9 +28,8 @@ PATH="$PATH:$HOME/.composer/vendor/bin"
 source /usr/local/bin/virtualenvwrapper.sh
 
 # Ruby
-[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
-export PATH="$PATH:$HOME/.rvm/bin" # Add RVM to PATH for scripting
+source /usr/local/share/chruby/chruby.sh
+chruby ruby-2.1.4
 
 # Solarized
 export MC_SKIN=$HOME/.config/mc/solarized.ini
-
