--- a/templates/.tmux.conf
+++ b/templates/.tmux.conf
@@ -16,6 +16,9 @@ unbind C-b
 set -g prefix C-a
 bind a send-prefix
 
+# start numbering at 1
+set -g base-index 1
+
 # --- colors (solarized dark)
 # default statusbar colors
 set -g status-bg black
@@ -75,12 +78,22 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
+
 # sync
 bind b set-window-option synchronize-panes
 bind C-b set-window-option synchronize-panes
 
 # zoom
-# set-option -g allow-rename off
+set-option -g allow-rename off
 set-window-option -g automatic-rename off
 bind -n M-\; run ". ~/.tmux/zoom"
 
