--- a/templates/.env
+++ b/templates/.env
@@ -1,5 +1,5 @@
 # Bin
-PATH="$PATH:$HOME/_/bin:$HOME/_/aws/bin"
+PATH="$PATH:$HOME/_/bin:$HOME/_/aws/bin:/srv/bin"
 
 # AWS
 export AWS_CREDENTIAL_FILE="$HOME/.ssh/rds"
