Update NODE_ENV. Move .z out of home

--- a/templates/.env
+++ b/templates/.env
@@ -15,7 +15,7 @@ PATH="$NPM_PACKAGES/bin:$PATH"
 unset MANPATH
 MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
 NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
-export NODE_ENV=development
+export NODE_ENV=dev
 
 # Golang
 export GOPATH="/home/karelian/_/go"
@@ -31,5 +31,9 @@ source /usr/local/bin/virtualenvwrapper.sh
 source /usr/local/share/chruby/chruby.sh
 chruby ruby-2.1.4
 
-# Solarized
+# Solarized MC
 export MC_SKIN=$HOME/.config/mc/solarized.ini
+
+# Z - Prevent ~ spamming
+export _Z_DATA=/var/tmp/karelian.z
+
