Ruby should be higher. Add s3cfg

--- a/templates/.env
+++ b/templates/.env
@@ -29,7 +29,7 @@ source /usr/local/bin/virtualenvwrapper.sh
 
 # Ruby
 source /usr/local/share/chruby/chruby.sh
-chruby ruby-2.1.4
+chruby ruby-2.2.3
 
 # Solarized MC
 export MC_SKIN=$HOME/.config/mc/solarized.ini
@@ -37,3 +37,5 @@ export MC_SKIN=$HOME/.config/mc/solarized.ini
 # Z - Prevent ~ spamming
 export _Z_DATA=/var/tmp/karelian.z
 
+# Env-setup
+export S3CFG_BASE=/srv/gits/env-setup/ami
