Tmux keys for history clearing + window renumbering

--- a/templates/.tmux.conf
+++ b/templates/.tmux.conf
@@ -2,6 +2,9 @@
 set -g utf8
 set-window-option -g utf8 on
 
+# clear history
+bind -n C-k clear-history
+
 # improve colors
 set -g default-terminal 'screen-256color'
 
@@ -87,6 +90,9 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
+
+# re-number
+bind ` move-window -r
 
 # sync
 bind b set-window-option synchronize-panes
