Nuke fish. Add vpn indicator. Update pkgs

--- a/i3/.i3/i3status.conf
+++ b/i3/.i3/i3status.conf
@@ -14,7 +14,7 @@ general {
         interval = 5
 }
 
-order += "disk /home"
+order += "path_exists VPN"
 order += "disk /"
 order += "battery 0"
 order += "load"
@@ -34,4 +34,11 @@ load {
 
 disk "/" {
         format = "%avail"
+}
+
+path_exists VPN {
+        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
+        path = "/proc/sys/net/ipv4/conf/tun0"
+        format_down = ""
+        format = "%title"
 }
