--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -96,26 +96,25 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+g focus child
 
-set $workspace1 workspace "1: sh"
-set $workspace2 workspace "2: www"
-set $workspace3 workspace "e: subl"
-set $workspace4 workspace "c: misc"
+set $editor_ws workspace "1: edit"
+set $misc_ws   workspace "2: misc"
+set $term_ws   workspace "3: sh"
 
 # switch to workspace
-bindsym $mod+1 $workspace1
-bindsym $mod+2 $workspace2
-bindsym $mod+e $workspace3
-bindsym $mod+c $workspace4
+bindsym $mod+1 $editor_ws
+bindsym $mod+2 $misc_ws
+bindsym $mod+3 $term_ws
+bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to $workspace1
-bindsym $mod+Shift+2 move container to $workspace2
-bindsym $mod+Shift+e move container to $workspace3
-bindsym $mod+Shift+c move container to $workspace4
+bindsym $mod+Shift+1 move container to $editor_ws
+bindsym $mod+Shift+2 move container to $misc_ws
+bindsym $mod+Shift+3 move container to $term_ws
+bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
@@ -181,13 +180,15 @@ exec --no-startup-id parcellite
 exec --no-startup-id thunar --daemon
 exec --no-startup-id xautolock -time 10 -locker "~/.i3/locker.sh"
 exec --no-startup-id dropboxd
-exec --no-startup-id urxvt -e sh -c "tmux attach -t base || tmux new-session -s base"
+exec --no-startup-id autokey-gtk
+exec --no-startup-id subl3
+#exec --no-startup-id urxvt -e sh -c "tmux attach -t base || tmux new-session -s base"
 
 # Background image
 exec --no-startup-id ~/.i3/wallpaper.sh
 
 # No title bars. Doesn't play well with compton and MOAR SPACE!
-new_window pixel
+new_window pixel 1
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
@@ -218,9 +219,11 @@ bindsym $mod+Escape mode "$mode_system"
 bindsym $mod+Shift+r restart
 
 # reload the configuration file
-# bindsym $mod+Ctrl+c reload
+bindsym $mod+Ctrl+r reload
+
 # exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut.
+# Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # Session management
 set $mode_session Session (s) save, (r) restore
@@ -237,10 +240,12 @@ bindsym $mod+i mode "$mode_session"
 
 # Application management
 focus_on_window_activation focus
-for_window [class="chromium"] move to $workspace2, layout tabbed
-for_window [class="Subl3"] move to $workspace3, layout tabbed
+focus_follows_mouse no
+hide_edge_borders both
+for_window [class="Slack"] move to $misc_ws, layout tabbed
+for_window [class="Subl3"] move to $edit_ws, layout tabbed
 
 # Scratchpad
-bindsym $mod+0x60 [instance="^scratchpad$"] scratchpad show
+bindsym $mod+0x60 [instance="^scratchpad$"] scratchpad show; move absolute position 1935px 455px; resize set 1250px 1300px
 exec_always flock -w1 ~/.i3/scratchpad/lockfile ~/.i3/scratchpad/perpetual_terminal.sh
-for_window [instance="^scratchpad$"] move scratchpad
+for_window [instance="^scratchpad$"] move scratchpad; sticky enable
