tmux: split pane under same path

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,10 +9,10 @@ bind -n C-k clear-history
 set -g default-terminal 'screen-256color'
 
 # terminator like window splits
-bind e split-window -h
-bind C-e split-window -h
-bind o split-window
-bind C-o split-window
+bind e split-window -h -c '#{pane_current_path}'
+bind C-e split-window -h -c '#{pane_current_path}'
+bind o split-window -c '#{pane_current_path}'
+bind C-o split-window -c '#{pane_current_path}'
 
 # act like GNU screen
 unbind C-b
