--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -163,6 +163,7 @@ bar {
     }
     # i3bar position
     position top
+    output eDP1
     # Using custom i3status.conf
     status_command i3status -c ~/.i3/i3status.conf
 }
