--- a/zsh/.env
+++ b/zsh/.env
@@ -17,8 +17,8 @@ NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
 export NODE_ENV=dev
 
 # Golang
-export GOPATH="/home/karelian/_/go"
-PATH="$PATH:$HOME/_/go/bin"
+export GOPATH="/home/karelian/src/go"
+PATH="$PATH:$HOME/src/go/bin"
 
 # PHP
 PATH="$PATH:$HOME/.composer/vendor/bin"
