--- a/zsh/.env
+++ b/zsh/.env
@@ -1,5 +1,5 @@
 # Bin
-PATH="$PATH:$HOME/_/bin:$HOME/_/aws/bin:/srv/bin"
+PATH="$PATH:$HOME/_/bin:$HOME/_/aws/bin:/srv/_/bin"
 
 # AWS
 export AWS_CREDENTIAL_FILE="$HOME/.ssh/rds"
@@ -33,5 +33,12 @@ export MC_SKIN=$HOME/.config/mc/solarized.ini
 # Z - Prevent ~ spamming
 export _Z_DATA=/var/tmp/karelian.z
 
-# Env-setup
-export S3CFG_BASE=/srv/gits/env-setup/ami
+# Juju
+alias juju='lxc exec c0 -- juju'
+function c0() {
+ if [ "$#" -eq 0 ]; then
+   lxc exec c0 bash 
+ else
+   lxc exec c0 -- $@
+ fi
+}
