Env tweaks for docker/juju/kubernetes work

--- a/zsh/.env
+++ b/zsh/.env
@@ -1,5 +1,5 @@
 # Bin
-PATH="$PATH:$HOME/_/bin:$HOME/_/aws/bin:/srv/_/bin"
+PATH="$PATH:$HOME/bin:/srv/bin"
 
 # AWS
 export AWS_CREDENTIAL_FILE="$HOME/.ssh/rds"
@@ -25,7 +25,7 @@ PATH="$PATH:$HOME/.composer/vendor/bin"
 
 # Ruby
 source /usr/share/chruby/chruby.sh
-chruby ruby-2.3.0
+chruby ruby-2.3.1
 
 # Solarized MC
 export MC_SKIN=$HOME/.config/mc/solarized.ini
@@ -33,12 +33,20 @@ export MC_SKIN=$HOME/.config/mc/solarized.ini
 # Z - Prevent ~ spamming
 export _Z_DATA=/var/tmp/karelian.z
 
-# Juju
-alias juju='lxc exec c0 -- juju'
-function c0() {
+# Juju 
+alias juju='lxc exec juju -- juju'
+function j0() {
  if [ "$#" -eq 0 ]; then
-   lxc exec c0 bash 
+   lxc exec juju bash 
  else
-   lxc exec c0 -- $@
+   lxc exec juju -- $@
  fi
 }
+
+# Kubernetes
+alias kc=kubectl
+
+# Allow all nodes to access the Internet
+sudo iptables -t nat -C POSTROUTING -o wlp58s0 -j MASQUERADE &>/dev/null \
+|| sudo iptables -t nat -A POSTROUTING -o wlp58s0 -j MASQUERADE
+
