--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -49,7 +49,7 @@ keyserver hkps://hkps.pool.sks-keyservers.net
 
 # When using --refresh-keys, if the key in question has a preferred keyserver
 # URL, then disable use of that preferred keyserver to refresh the key from
-keyserver-options no-honor-keyserver-url
+# keyserver-options no-honor-keyserver-url
 
 # When searching for a key with --search-keys, include keys that are marked on
 # the keyserver as revoked
