Disable ansible-cowsay

--- a/zsh/.env
+++ b/zsh/.env
@@ -33,11 +33,11 @@ export MC_SKIN=$HOME/.config/mc/solarized.ini
 # Z - Prevent ~ spamming
 export _Z_DATA=/var/tmp/karelian.z
 
-# Juju 
+# Juju
 alias juju='lxc exec juju -- juju'
 function j0() {
  if [ "$#" -eq 0 ]; then
-   lxc exec juju bash 
+   lxc exec juju bash
  else
    lxc exec juju -- $@
  fi
@@ -50,3 +50,5 @@ alias kc=kubectl
 sudo iptables -t nat -C POSTROUTING -o wlp58s0 -j MASQUERADE &>/dev/null \
 || sudo iptables -t nat -A POSTROUTING -o wlp58s0 -j MASQUERADE
 
+# Ansible
+export ANSIBLE_NOCOWS=1
