Cleanup env. Move golang

--- a/zsh/.env
+++ b/zsh/.env
@@ -17,8 +17,8 @@ NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
 export NODE_ENV=dev
 
 # Golang
-export GOPATH="/home/karelian/src/go"
-PATH="$PATH:$HOME/src/go/bin"
+export GOPATH="$HOME/.golang"
+PATH="$PATH:$GOPATH/bin"
 
 # PHP
 PATH="$PATH:$HOME/.composer/vendor/bin"
@@ -46,9 +46,9 @@ function j0() {
 # Kubernetes
 alias kc=kubectl
 
-# Allow all nodes to access the Internet
-sudo iptables -t nat -C POSTROUTING -o wlp58s0 -j MASQUERADE &>/dev/null \
-|| sudo iptables -t nat -A POSTROUTING -o wlp58s0 -j MASQUERADE
-
 # Ansible
 export ANSIBLE_NOCOWS=1
+
+# Silversearch hidden files by default
+alias ag='ag --hidden'
+
