--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -186,7 +186,7 @@ exec --no-startup-id thunar --daemon
 exec --no-startup-id xautolock -time 10 -locker "~/.i3/locker.sh"
 exec --no-startup-id dropboxd
 exec --no-startup-id autokey-gtk
-exec --no-startup-id ~/src/cloudy/watcher.py
+exec --no-startup-id /src/lang.python/cloudy/watcher.py
 exec --no-startup-id syndaemon -i 1 -t -k
 
 # Background image
