Add local python modules to PATH

--- a/zsh/.env
+++ b/zsh/.env
@@ -1,5 +1,5 @@
 # Bin
-PATH="$PATH:/src/_bin:/src/ops.kube/bin"
+PATH="$PATH:/src/_bin:/src/ops.kube/bin:${HOME}/.local/bin"
 
 # AWS
 export AWS_CREDENTIAL_FILE="$HOME/.ssh/rds"
