[aws] fix credentials path and export a default profile

--- a/zsh/.env
+++ b/zsh/.env
@@ -2,8 +2,9 @@
 PATH="$PATH:/src/_bin:/src/ops.kube/bin:${HOME}/.local/bin"
 
 # AWS
-export AWS_CREDENTIAL_FILE="$HOME/.ssh/rds"
+export AWS_CREDENTIAL_FILE="$HOME/.aws/credentials"
 export EC2_REGION="eu-west-1"
+export AWS_PROFILE="default"
 
 # Java
 export JAVA_HOME="/usr"
