--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -101,12 +101,6 @@ bind -n M-\; run ". ~/.tmux/zoom"
 
 # copy/paste/search
 set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-
 setw -g mode-keys vi
 setw -g xterm-keys on
-
-#unbind c
-#bind c run "tmux show-buffer | xsel -i -b" \; display-message "Yanked"\;
-
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
