--- a/zsh/.env
+++ b/zsh/.env
@@ -49,3 +49,7 @@ export ANSIBLE_NOCOWS=1
 
 # Silversearch hidden files by default
 alias ag='ag --hidden'
+
+# Fix the sort order
+export LC_COLLATE="C"
+
