--- a/zsh/.env
+++ b/zsh/.env
@@ -21,6 +21,11 @@ PATH="$PATH:$GOPATH/bin"
 # PHP
 PATH="$PATH:$HOME/.composer/vendor/bin"
 
+# Python
+export PYENV_ROOT="$HOME/.pyenv"
+export PATH="${PYENV_ROOT}/bin:$PATH"
+eval "$(pyenv init - zsh)"
+
 # Ruby
 source /usr/share/chruby/chruby.sh
 chruby ruby-2.3.1
@@ -31,25 +36,8 @@ export MC_SKIN=$HOME/.config/mc/solarized.ini
 # Z - Prevent ~ spamming
 export _Z_DATA=/var/tmp/karelian.z
 
-# Juju
-alias juju='lxc exec juju -- juju'
-function j0() {
- if [ "$#" -eq 0 ]; then
-   lxc exec juju bash
- else
-   lxc exec juju -- $@
- fi
-}
-
-# Kubernetes
-alias k=kubectl
-
 # Ansible
 export ANSIBLE_NOCOWS=1
 
-# Silversearch hidden files by default
-alias ag='ag --hidden'
-
 # Fix the sort order
 export LC_COLLATE="C"
-
