[zsh] add spark env

--- a/zsh/.env
+++ b/zsh/.env
@@ -6,8 +6,8 @@ export AWS_CREDENTIAL_FILE="$HOME/.aws/credentials"
 export EC2_REGION="eu-west-1"
 export AWS_PROFILE="default"
 
-# Java
-export JAVA_HOME="/usr"
+# Kube
+export KUBECONFIG="${HOME}/.kube/config.vps:${HOME}/.kube/config.klarna"
 
 # Node
 NPM_PACKAGES="$HOME/.npm-packages"
@@ -32,6 +32,10 @@ chruby ruby-2.3.1
 
 # Solarized MC
 export MC_SKIN=$HOME/.config/mc/solarized.ini
+
+# Spark
+export SPARK_HOME=/opt/spark
+export PATH=$SPARK_HOME/bin:$PATH
 
 # Z - Prevent ~ spamming
 export _Z_DATA=/var/tmp/karelian.z
