--- a/moc/.moc/config
+++ b/moc/.moc/config
@@ -1,8 +1,9 @@
 Theme = ric
-MusicDir = /home/karelian/_/media/audio
+MusicDir = /home/karelian/Storage/Music
 ShowTime = no
 Keymap = keymap
 StartInMusicDir = yes 
-FastDir1 = /home/karelian/_/media/audio
+FastDir1 = /home/karelian/Storage/Music
 PlaylistFullPaths = no
+SoundDriver = pulseaudio
 
