Tmux: bind zoom to ;

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -94,6 +94,9 @@ bind b set-window-option synchronize-panes
 bind C-b set-window-option synchronize-panes
 
 # zoom
+bind -n M-\; resize-pane -Z
+
+# renaming
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
 
