--- a/zsh/.env
+++ b/zsh/.env
@@ -1,47 +1,59 @@
-# Bin
-PATH="$PATH:/src/_bin:/src/ops.kube/bin:${HOME}/.local/bin"
+enable_langs=(python golang node)
 
-# AWS
-export AWS_CREDENTIAL_FILE="$HOME/.aws/credentials"
-export EC2_REGION="eu-west-1"
+# -- AWS -----------------------------------------------------------------------
+export AWS_CREDENTIAL_FILE="${HOME}/.aws/credentials"
 export AWS_PROFILE="default"
+export EC2_REGION="eu-west-1"
 
-# Kube
-export KUBECONFIG="${HOME}/.kube/config.vps:${HOME}/.kube/config.klarna"
+# -- Language Support ----------------------------------------------------------
+if [[ "$enable_langs" =~ "python" ]]; then
+  export PYENV_ROOT="${HOME}/.pyenv"
+  export PATH="${PYENV_ROOT}/bin:${PATH}"
+  eval "$(pyenv init -)"
+fi
 
-# Node
-NPM_PACKAGES="$HOME/.npm-packages"
-PATH="$NPM_PACKAGES/bin:$PATH"
-NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
+if [[ "$enable_langs" =~ "golang" ]]; then
+  PATH="${PATH}:${HOME}/go/bin"
+  export GOPATH="${HOME}/go"
+fi
 
-# Golang
-export GOPATH="$HOME/.golang"
-PATH="$PATH:$GOPATH/bin"
+if [[ "$enable_langs" =~ "java" ]]; then
+  export JAVA_HOME="/Library/Java/JavaVirtualMachines/jdk1.8.0_141.jdk/Contents/Home"
+  export SDKMAN_DIR="${HOME}/.sdkman"
+  [[ -s "${HOME}/.sdkman/bin/sdkman-init.sh" ]] && source "${HOME}/.sdkman/bin/sdkman-init.sh"
+fi
 
-# PHP
-PATH="$PATH:$HOME/.composer/vendor/bin"
+if [[ "$enable_langs" =~ "ruby" ]]; then
+  source /usr/local/opt/chruby/share/chruby/chruby.sh
+  chruby ruby-2.3.1
+fi
 
-# Python
-export PYENV_ROOT="$HOME/.pyenv"
-export PATH="${PYENV_ROOT}/bin:$PATH"
-eval "$(pyenv init - zsh)"
+if [[ "$enable_langs" =~ "node" ]]; then
+  NPM_PACKAGES="${HOME}/.npm-packages"
+  PATH="${PATH}:${NPM_PACKAGES}/bin"
+  NODE_PATH="${NPM_PACKAGES}/lib/node_modules:${NODE_PATH}"
+fi
 
-# Ruby
-source /usr/share/chruby/chruby.sh
-chruby ruby-2.3.1
+if [[ "$enable_langs" =~ "php" ]]; then
+  PATH="${PATH}:${HOME}/.composer/vendor/bin"
+fi
 
-# Solarized MC
+# -- Misc ----------------------------------------------------------------------
 export MC_SKIN=$HOME/.config/mc/solarized.ini
-
-# Spark
-export SPARK_HOME=/opt/spark
-export PATH=$SPARK_HOME/bin:$PATH
-
-# Z - Prevent ~ spamming
-export _Z_DATA=/var/tmp/karelian.z
-
-# Ansible
+export _Z_DATA=/var/tmp/karelian.z # stfu z
 export ANSIBLE_NOCOWS=1
+alias ag='ag --hidden' # search hidden
+PATH="${PATH}:${HOME}/bin"
 
-# Fix the sort order
+# -- OSX -----------------------------------------------------------------------
+if [[ $ZSH_UNAME == 'Darwin' ]]; then
+  export GPG_TTY=$(tty) # mac gpg fix
+  PATH="/usr/local/opt/coreutils/libexec/gnubin:${PATH}"
+  MANPATH="/usr/local/opt/gnu-sed/libexec/gnuman:$(manpath)"
+  export HOMEBREW_NO_AUTO_UPDATE=1
+fi
+
+# -- Encoding ------------------------------------------------------------------
+export LANG=en_US.UTF-8
+export LC_CTYPE=en_US.UTF-8
 export LC_COLLATE="C"
