--- a/i3/.i3/i3status.conf
+++ b/i3/.i3/i3status.conf
@@ -7,11 +7,11 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        color_good = "#BBBBBB"
-        color_bad = "#CC1616"
-        color_degraded = "#55858E"
-        interval = 5
+    colors = true
+    color_good = "#BBBBBB"
+    color_bad = "#CC1616"
+    color_degraded = "#55858E"
+    interval = 5
 }
 
 order += "path_exists VPN"
@@ -21,24 +21,25 @@ order += "load"
 order += "tztime local"
 
 battery 0 {
-        format = "%status %percentage %remaining"
+    format = "%status %percentage %remaining"
+    last_full_capacity = true
 }
 
 tztime local {
-        format = "%d-%m-%Y %H:%M:%S"
+    format = "%d-%m-%Y %H:%M:%S"
 }
 
 load {
-        format = "%1min"
+    format = "%1min"
 }
 
 disk "/" {
-        format = "%avail"
+    format = "%avail"
 }
 
 path_exists VPN {
-        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
-        path = "/proc/sys/net/ipv4/conf/tun0"
-        format_down = ""
-        format = "%title"
+    # path exists when a VPN tunnel launched by nmcli/nm-applet is active
+    path = "/proc/sys/net/ipv4/conf/tun0"
+    format_down = ""
+    format = "%title"
 }
