[misc] simplify dir structure. check in mc panels

--- a/moc/.moc/config
+++ b/moc/.moc/config
@@ -1,9 +1,9 @@
 Theme = ric
-MusicDir = /home/karelian/Storage/Music
+MusicDir = /home/karelian/Music
 ShowTime = no
 Keymap = keymap
 StartInMusicDir = yes 
-FastDir1 = /home/karelian/Storage/Music
+FastDir1 = /home/karelian/Music
 PlaylistFullPaths = no
 SoundDriver = pulseaudio
 
