[tmux] enter vi search mode in one keystroke

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -93,8 +93,9 @@ bind ` move-window -r
 bind b set-window-option synchronize-panes
 bind C-b set-window-option synchronize-panes
 
-# zoom
-bind -n M-\; resize-pane -Z
+# zoom / search
+#bind -n M-\; resize-pane -Z
+bind-key / copy-mode \; send-key ?
 
 # renaming
 set-option -g allow-rename off
