[mac] further input device tweaks

--- a/.arch/etc/X11/xorg.conf.d/20-synaptics-mac.conf
+++ b/.arch/etc/X11/xorg.conf.d/20-synaptics-mac.conf
@@ -6,36 +6,38 @@ Section "InputClass"
 
 	#Option "AccelFactor" "3.0"
 
-	Option "LeftEdge" "15%"
-	Option "RightEdge" "15%"
-	Option "TopEdge" "10%"
-	Option "BottomEdge" "10%"
+	#Option "LeftEdge" "15%"
+	#Option "RightEdge" "15%"
+	#Option "TopEdge" "10%"
+	#Option "BottomEdge" "10%"
 
 	Option "HorizTwoFingerScroll" "1"
 	Option "VertTwoFingerScroll" "1"
-	Option "HorizScrollDelta" "100"
-	Option "VertScrollDelta" "100"
+	#Option "HorizScrollDelta" "50"
+	#Option "VertScrollDelta" "50"
 
 	Option "CoastingSpeed" "10"
-	Option "CoastingFriction" "0"
+	Option "CoastingFriction" "10"
 
 	Option "VertEdgeScroll" "0"
 	Option "HorizEdgeScroll" "0"
 	Option "CornerCoasting" "0"
 
 	Option "PalmDetect" "1"
-	Option "PalmMinWidth" "9"
-	Option "PalmMinZ" "185"
+	Option "PalmMinWidth" "13"
+	Option "PalmMinZ" "195"
 
+	#Option "FastTaps" "1"
+	Option "MaxTapTime" "300"
 	Option "TapButton1" "1"
 	Option "TapButton2" "3"
 	Option "TapButton3" "2"
 
 	#Option "SoftButtonAreas" "70% 0 0 0 35% 65% 0 0"
 
-	Option "ClickButton1" "0"
-	Option "ClickButton2" "0"
-	Option "ClickButton3" "0"
+	#Option "ClickButton1" "0"
+	#Option "ClickButton2" "0"
+	#Option "ClickButton3" "0"
 
 	Option "RTCornerButton" "0"
 	Option "RBCornerButton" "0"
