--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -34,7 +34,7 @@ for_window [window_role="task_dialog"] floating enable
 # terminals
 bindsym $mod+Return exec urxvt
 bindsym $mod+t exec thunar
-bindsym $mod+slash exec google-chrome-stable
+bindsym $mod+slash exec ~/bin/chrome-wrapper
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -133,16 +133,16 @@ mode "resize" {
     # Pressing right will grow the window’s width.
     # Pressing up will shrink the window’s height.
     # Pressing down will grow the window’s height.
-    bindsym $mod+h resize shrink width 20 px or 20 ppt
-    bindsym $mod+j resize grow height 20 px or 20 ppt
-    bindsym $mod+k resize shrink height 20 px or 20 ppt
-    bindsym $mod+l resize grow width 20 px or 20 ppt
+    bindsym $mod+h resize shrink width 10 px or 10 ppt
+    bindsym $mod+j resize grow height 10 px or 10 ppt
+    bindsym $mod+k resize shrink height 10 px or 10 ppt
+    bindsym $mod+l resize grow width 10 px or 10 ppt
 
     # same bindings, but for the arrow keys
-    bindsym Left resize shrink width 20 px or 20 ppt
-    bindsym Down resize grow height 20 px or 20 ppt
-    bindsym Up resize shrink height 20 px or 20 ppt
-    bindsym Right resize grow width 20 px or 20 ppt
+    bindsym Left resize shrink width 10 px or 10 ppt
+    bindsym Down resize grow height 10 px or 10 ppt
+    bindsym Up resize shrink height 10 px or 10 ppt
+    bindsym Right resize grow width 10 px or 10 ppt
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -232,26 +232,7 @@ bindsym $mod+Shift+r restart
 # reload the configuration file
 bindsym $mod+Ctrl+r reload
 
-# exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut.
-# Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-
-# Session management
-set $mode_session Session (s) save, (r) restore
-mode "$mode_session" {
-    bindsym s exec --no-startup-id i3session save, mode "default"
-    bindsym r exec --no-startup-id i3session restore, mode "default"
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
-bindsym $mod+i mode "$mode_session"
-
 # Application management
 focus_on_window_activation focus
 focus_follows_mouse no
 hide_edge_borders horizontal
-
-for_window [class="google-chrome"] move to $www_ws, layout tabbed
